date expand and collapse solve error

--- a/src/app/components/member-info/member-info.component.scss
+++ b/src/app/components/member-info/member-info.component.scss
@@ -281,3 +281,11 @@ tr:nth-child(even){background-color: #f2f2f2}
     border: 1px solid #18bc9c;
     color: #4fc2a8;
 }
+
+.showDate{
+    text-align: center;
+    font-size: 1rem;
+    border-top: 1px dashed #000;
+    padding: 5px 5px 0 5px;
+    color: #777071;
+}
